Mon Feb 17 11:28:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_pty.rb: ignore warnings to unused variables.

Mon Feb 17 11:27:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_find.rb: remove unused variables.

Sun Feb 17 02:12:00 2014  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_initialize): Insert GC guard.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_global_new): ditto.

Sun Feb 16 15:53:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_securerandom.rb: File.exists? is deprecated. use File.exist?

Sun Feb 16 15:05:00 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/pathname/test_pathname.rb: File.exists? is deprecated. use File.exist?

Sun Feb 16 15:00:28 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/net/ftp/test_ftp.rb: remove unused variables.
	* test/logger/test_logger.rb: ditto.

Sun Feb 16 14:52:46 2014  Eric Wong  <e@80x24.org>

	* dir.c (dir_s_glob): RB_GC_GUARD instead of volatile

Sun Feb 16 14:33:52 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (RBIGNUM_SIGN): Defined for compatibility.
	  (RBIGNUM_POSITIVE_P): Ditto.
	  (RBIGNUM_NEGATIVE_P): Ditto.

Sun Feb 16 12:46:47 2014  Eric Wong  <e@80x24.org>

	* io.c (rb_f_backquote): trade volatile for manual recycle
	  rb_gc_force_recycle ensures object is visible until recycle

Sun Feb 16 11:55:14 2014  Eric Wong  <e@80x24.org>

	* marshal.c (marshal_dump): use rb_gc_force_recycle for GC-safety
	  (marshal_load): ditto
	  [ruby-core:60730] [Bug #7805]

Sun Feb 16 08:11:23 2014  Zachary Scott  <e@zzak.io>

	* README.EXT.ja: [DOC] Fix typo by @utenmiki [Fixes GH-534]
	  https://github.com/ruby/ruby/pull/534

Sun Feb 16 07:48:20 2014  Tanaka Akira  <akr@fsij.org>

	* ext/bigdecimal/bigdecimal.c (BIGNUM_ZERO_P): Unused macro removed.

Sun Feb 16 06:12:23 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Rename macro names: RBIGNUM_FOO to BIGNUM_FOO.